--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,22 @@
-
+# Ignore main build log
 Build/main.log
+
+# Ignore files compiled by VSCode
+main.aux
+main.fdb_latexmk
+main.fls
+main.log
+main.out
+main.pdf
+main.synctex.gz
+main.toc
+
+# Ignore the same as above in Chapters
+Chapters/*.aux
+Chapters/*.fdb_latexmk
+Chapters/*.fls
+Chapters/*.log
+Chapters/*.out
+Chapters/*.pdf
+Chapters/*.synctex.gz
+Chapters/*.toc
