--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,9 @@
-# Ignore main build log
-Build/main.log
-
-# Ignore files compiled by VSCode
-main.aux
-main.fdb_latexmk
-main.fls
-main.log
-main.out
-main.pdf
-main.synctex.gz
-main.toc
-
-# Ignore the same as above in Chapters
-Chapters/*.aux
-Chapters/*.fdb_latexmk
-Chapters/*.fls
-Chapters/*.log
-Chapters/*.out
-Chapters/*.pdf
-Chapters/*.synctex.gz
-Chapters/*.toc
+# ignore generated output files
+*.aux
+*.fdb_latexmk
+*.fls
+*.log
+*.out
+*.pdf
+*.synctex.gz
+*.toc
