--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -10,3 +10,8 @@ jobs:
         uses: xu-cheng/latex-action@v2
         with:
           root_file: main.tex
+      - name: Place the PDF to the workflow tab
+        uses: actions/upload-artifact@v2
+        with:
+          name: PDF
+          path: main.pdf
